[tool.poetry]
name = "yuidoc2-github-io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "yuidoc2"}]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
